added feature toner in facecare

--- a/styles/facecare.css
+++ b/styles/facecare.css
@@ -18,3 +18,10 @@
     background-color: #4D17E2;
     padding: 0.75rem 3rem;
 }
+
+/* Toner */
+.toner .btn-toner {
+    border-radius: 1.625rem;
+    background-color: #4D17E2;
+    padding: 0.75rem 3rem;
+}
