--- a/styles/facecare.css
+++ b/styles/facecare.css
@@ -25,3 +25,10 @@
     background-color: #4D17E2;
     padding: 0.75rem 3rem;
 }
+
+/* Serum */
+.serum .btn-serum {
+    border-radius: 1.625rem;
+    background-color: #4D17E2;
+    padding: 0.75rem 3rem;
+}
