add section cream in facecare

--- a/styles/facecare.css
+++ b/styles/facecare.css
@@ -32,3 +32,10 @@
     background-color: #4D17E2;
     padding: 0.75rem 3rem;
 }
+
+/* Cream */
+.cream .btn-cream {
+    border-radius: 1.625rem;
+    background-color: #4D17E2;
+    padding: 0.75rem 3rem;
+}
