--- a/styles/facecare.css
+++ b/styles/facecare.css
@@ -39,3 +39,10 @@
     background-color: #4D17E2;
     padding: 0.75rem 3rem;
 }
+
+/* Face Mask */
+.face-mask .btn-face-mask {
+    border-radius: 1.625rem;
+    background-color: #4D17E2;
+    padding: 0.75rem 3rem;
+}
