--- a/styles/facecare.css
+++ b/styles/facecare.css
@@ -4,8 +4,8 @@
     padding: 0.75rem 3rem;
 }
 
-/* Face Solution Step */
-.face-solution .column-card {
+/* Face Care Step */
+.face-care-step .column-card {
     border-radius: 1.625rem;
     margin-right: 16px;
     background-color: #4D17E2;
