--- a/styles/haircare.css
+++ b/styles/haircare.css
@@ -15,3 +15,16 @@
     background-color: #4D17E2;
     padding: 0.75rem 3rem;
 }
+
+.hair-care-tips-step .column-card {
+    border-radius: 1.625rem;
+    margin-right: 16px;
+    background-color: #4D17E2;
+    padding: 0.75rem 3rem;
+}
+
+.shampoo-tips .column-card {
+    border-radius: 2.625rem;
+    background-color: #4D17E2;
+    padding: 0.75rem 3rem;
+}
